# python-devops-course

./: .env.shared  .gitignore  Makefile  README.md  pyproject.toml  update_pyproject.py
app/: api.py  utils.py
docs/: conf.py
tests/: conftest.py  test_api.py  test_utils.py
