[build-system]
requires = [ "setuptools", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "python-devops"
requires-python = ">=3.7"
version = "0.3.1"
description = "Material for a python devops course."
dependencies = [ "black==24.2.0", "build==1.0.3", "click==8.1.7", "iniconfig==2.0.0", "mypy-extensions==1.0.0", "packaging==23.2", "pathspec==0.12.1", "platformdirs==4.2.0", "pluggy==1.4.0", "pyproject_hooks==1.0.0", "pytest==8.0.0", "toml==0.10.2",]
[[project.authors]]
name = "Sckathach"
